# rustmetos

./: .gitignore  LICENSE  README.md
rustmetos/: Cargo.toml
rustmetos/src/: main.rs
rustmetos_api/: Cargo.toml
rustmetos_api/src/: api.rs
rustmetos_core/: Cargo.toml
rustmetos_core/src/: lib.rs  shell.rs
rustmetos_sdk/: CBA_SPECS.md  Cargo.toml  README.md
rustmetos_std/: Cargo.toml  README.md  build.py  install.py
rustmetos_std/data/conf/: init.conf
rustmetos_std/data/data/info/: boot.md  info.md  read.md  sh.md  unzip.md  webget.md
