[package]
name = "rustmetos"
version = "1.0.0"
edition = "2021"
authors = ["xcodz-dot"]
description = "Rustmetos, A meta operating system written in rust for educational purposes only."
readme = "../README.md"
homepage = "https://github.com/xcodz-dot/rustmetos"
repository = "https://github.com/xcodz-dot/rustmetos"
license = "MIT"
keywords = ["rustmetos", "meta", "os", "educational"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustmetos_core = { path = "../rustmetos_core", version = "^1.0" }
home = "0.5"
zip = "0.5"
ini = "1.3.0"
