[package]
name = "rustmetos_api"
version = "1.0.2"
edition = "2021"
authors = ["xcodz-dot"]
description = "Rustmetos API, contains app development api and os interaction apis."
readme = false 
homepage = "https://github.com/xcodz-dot/rustmetos"
repository = "https://github.com/xcodz-dot/rustmetos"
license = "MIT"
keywords = ["rustmetos", "meta", "os", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustmetos_core = { path = "../rustmetos_core", version = "^1.0" }
