[package]
name = "rustmetos_std"
version = "0.3.0"
edition = "2021"
authors = ["xcodz-dot"]
description = "Rustmetos Standard Distribution"
readme = "README.md"
homepage = "https://github.com/xcodz-dot/rustmetos/"
repository = "https://github.com/xcodz-dot/rustmetos/"
license = "MIT"
keywords = ["rustmetos", "meta", "os", "standard", "distribution"]
default-run = "sh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustmetos_api = { path = "../rustmetos_api", version = "^1.0.0" }
rustmetos_core = { path = "../rustmetos_core", version = "^1.0.0" }
configparser = "^1.0.0"
zip = "^0.5"
reqwest = { version = "^0.11", features = ["blocking"] }
clap = { version = "^3.0.7", features = ["wrap_help"] }
